# code-agent

./: .gitignore  AGENTS.md  README.md  bug_hunter.py  planner.py  pyproject.toml  tasks.json
.claude/: settings.local.json
.github/workflows/: test.yml
src/code_agent/: __init__.py  checkpointing.py  cli.py  gitlab_utils.py  planning.py  tdd_subgraph.py  tracking.py
tasks/: checkpoints.md  langgraph-state.md  subgraph-generalization.md  tool_elimination.md
tests/: test_checkpointing.py  test_cli.py  test_gitlab_utils.py  test_planning.py  test_state_persistence.py  test_state_reducers.py  test_tdd_subgraph.py  test_tracking.py
